Refactor and finish the impl of user case;